<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>


	<groupId>br.edu.unoesc</groupId>
	<artifactId>sistema-web-gpsti</artifactId>
	<packaging>pom</packaging>
	<version>${sistema-parent.version}</version>


	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.9.RELEASE</version>
		<relativePath />
	</parent>


	<modules>
		<module>auth-server-parent</module>
		<module>config-server-parent</module>
		<module>eureka-server-parent</module>
		<module>zuul-server-parent</module>
		<module>acesso-service-parent</module>
		<module>pessoa-service-parent</module>
		<module>ui-service-parent</module>
	</modules>


	<properties>
		<!-- project properties -->
		<sistema-parent.version>1.0.0</sistema-parent.version>
		<acesso-service.version>1.0.0</acesso-service.version>
		<auth-server.version>1.0.0</auth-server.version>
		<config-server.version>1.0.0</config-server.version>
		<eureka-server.version>1.0.0</eureka-server.version>
		<zuul-server.version>1.0.0</zuul-server.version>
		<pessoa-service.version>1.0.0</pessoa-service.version>
		<ui-service.version>1.0.0</ui-service.version>
		<!-- project properties -->
		
		<!-- back-end properties -->
		<activation-api.version>1.2.0</activation-api.version>
		<hibernate.version>5.4.3.Final</hibernate.version>
		<java.version>12</java.version>
		<jaxb-api.version>2.3.1</jaxb-api.version>
		<jaxb-impl.version>2.3.2</jaxb-impl.version>
		<jaxb-runtime.version>2.3.2</jaxb-runtime.version>
		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
		<!-- back-end properties -->
		
		<!-- front-end properties -->
		<webjars-locator.version>0.37</webjars-locator.version>
		<webjars-jquery.version>3.4.1</webjars-jquery.version>
		<webjars-bootstrap.version>3.4.1</webjars-bootstrap.version>
		<webjars-fa.version>5.10.1</webjars-fa.version>
		<webjars-select2.version>4.0.8</webjars-select2.version>
		<webjars-datepicker.version>1.9.0</webjars-datepicker.version>
		<webjars-mask.version>1.14.15</webjars-mask.version>
		<webjars-adminlte.version>2.4.15</webjars-adminlte.version>
		<webjars-switch.version>3.3.4</webjars-switch.version>
		<webjars-jqueryui.version>1.12.1</webjars-jqueryui.version>
		<webjars-autocomplete.version>1.4.10</webjars-autocomplete.version>
		<webjars-icheck.version>1.0.2</webjars-icheck.version>
		<!-- front-end properties -->
	</properties>


	<dependencyManagement>
		<dependencies>
			<dependency>
				<artifactId>auth-server-parent</artifactId>
				<groupId>br.edu.unoesc.authserver</groupId>
				<version>${auth-server.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<artifactId>config-server-parent</artifactId>
				<groupId>br.edu.unoesc.configserver</groupId>
				<version>${config-server.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<artifactId>eureka-server-parent</artifactId>
				<groupId>br.edu.unoesc.eurekaserver</groupId>
				<version>${eureka-server.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<artifactId>zuul-server-parent</artifactId>
				<groupId>br.edu.unoesc.zuulserver</groupId>
				<version>${zuul-server.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<artifactId>acesso-service-parent</artifactId>
				<groupId>br.edu.unoesc.acessoservice</groupId>
				<version>${acesso-service.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<artifactId>pessoa-service-parent</artifactId>
				<groupId>br.edu.unoesc.pessoaservice</groupId>
				<version>${pessoa-service.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<artifactId>ui-service-parent</artifactId>
				<groupId>br.edu.unoesc.uiservice</groupId>
				<version>${ui-service.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
